--- a/bridge/pom.xml
+++ b/bridge/pom.xml
@@ -2,23 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>design_pattern</artifactId>
+        <groupId>org.example</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
-    <artifactId>design_pattern</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>iterator</module>
-        <module>adapter</module>
-        <module>Template</module>
-        <module>factory</module>
-        <module>Singleton</module>
-        <module>prototype</module>
-        <module>builder</module>
-        <module>Abstract_factory</module>
-        <module>bridge</module>
-    </modules>
+    <artifactId>bridge</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
