完成Chain of Responsibility模式

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>strategy</module>
         <module>Decorator</module>
         <module>visitor</module>
+        <module>chain_of_responsibility</module>
     </modules>
 
     <properties>
