--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>Decorator</module>
         <module>visitor</module>
         <module>chain_of_responsibility</module>
+        <module>proxy</module>
     </modules>
 
     <properties>
