--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>visitor</module>
         <module>chain_of_responsibility</module>
         <module>proxy</module>
+        <module>observer</module>
     </modules>
 
     <properties>
